<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Edmond Chui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>

    <string name="app_name">Beast Mode Engaged</string>
    <string name="add">Add</string>
    <string name="discard">Discard Changes</string>
    <string name="done">Done</string>
    <string name="title_hint">Enter a title</string>
    <string name="time_hint">Pick a date</string>
    <string name="start_time_hint">Pick a start date</string>
    <string name="end_time_hint">Pick an end date</string>
    <string name="in_progress">In progress</string>
    <string name="submitted">Submitted</string>
    <string name="returned">Returned</string>
    <string name="approved">Approved</string>
    <string name="new_expense">New Expense</string>
    <string name="disabled_prompt_submitted">Editing is disabled for a submitted claim.</string>
    <string name="disabled_prompt_approved">Editing is disabled for an approved claim.</string>
    <string name="dollar_sign">$</string>
    <string name="money_amount_hint">0.00</string>
    <string name="money_amount_error">Please enter a number.</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="delete_claim">Delete Claim</string>
    <string name="email_claim">Email Claim</string>
    <string name="no_email_app">No email app installed.</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="claim_format_title">Claim: %1$s</string>
    <string name="claim_format_template">        "Claim
        ==================
        Title: %1$s
        From: %2$s
        To: %3$s
        Status: %4$s

        "</string>
    <string name="expense_format_template">        "Expense
        ------------------
        Title: %1$s
        Amount: %2$s
        Date: %3$s
        Category: %4$s

        "</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="to">to</string>
    <string name="trip_duration">Trip Duration</string>
    <string name="expenses">Expenses</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="tag_hint">Name your tag here</string>
    <string name="location_hint">Tap to choose a location…</string>
    <string name="custom_location">Point on map</string>

    <string-array name="currencies">
        <item>CAD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>USD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>JPY</item>
    </string-array>
    <string-array name="expense_categories">
        <item>Air Fare</item>
        <item>Ground Transport</item>
        <item>Vehicle Rental</item>
        <item>Fuel</item>
        <item>Parking</item>
        <item>Registration</item>
        <item>Accommodation</item>
        <item>Meal</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_edit_claim">EditClaimActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_expense_view">Expense</string>
    <string name="title_activity_expense_list">Expenses</string>
    <string name="title_activity_claim_view">Claim</string>
    <string name="manage_tags">Manage Tags</string>
    <string name="start_date_hint">Pick Start Date…</string>
    <string name="end_date_hint">Pick End Date…</string>


    <string name="title_activity_new_destination">NewDestinationActivity</string>
    <string name="yes">Completed</string>
    <string name="no">In Progress</string>
    <string name="completed">Expense Status</string>
    <string name="no_receipt">There is no receipt available.</string>
    <string name="claimant">Claimant</string>
    <string name="approver">Approver</string>

    <string name="destination_name_text">Destination</string>
    <string name="reason_text">Reason</string>
    <string name="reason_hint">Reason</string>
    <string name="delete_destination">Delete Destination</string>

    <string name="description">Description</string>
    <string name="money">Cost</string>
    <string name="receipt">Receipt</string>
    <string name="location">Location</string>


    <string name="title_activity_edit_expense">EditExpenseActivity</string>
    <string name="expense_description_hint">Enter a description</string>
    <string name="expense_date_hint">Pick a Date</string>
    <string name="list_of_destinations_text">Destinations</string>
    <string name="list_of_expenses_text">Expenses</string>
    <string name="submit_text">Submit</string>
    <string name="expenses_text">Expenses</string>
    <string name="edit_claim">Edit Claim</string>
    <string name="tags">Tags</string>
    <string name="status">Status</string>
    <string name="currency">Currency</string>
    <string name="destinations">Destinations</string>
    <string name="tags_hint">Tap to add tags…</string>
    <string name="currencies_view_hint">No Currencies Yet</string>
    <string name="tags_view_hint">No Tags Yet</string>
    <string name="delete_receipt">Delete Receipt</string>
    <string name="map_activity_hint">Type a place here…</string>
    <string name="empty_error">Can\'t be empty!</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="filter_by_tag">Filter By Tag</string>
    <string name="empty_location">No location</string>
    <string name="home">Home</string>
    <string name="formated_home">Home (%1$s)</string>
    <string name="no_currencies">No currencies entered</string>
    <string name="no_tags">No tags entered</string>
    <string name="no_destinations">No destinations entered</string>
    <string name="no_previous_approvers">No previous approvers</string>
    <string name="amount">Amount</string>
    <string name="comments">Comments</string>
    <string name="claims">Claims</string>
    <string name="new_destination">New Destination…</string>

</resources>
