<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:hint="@string/expense_description_hint"
            android:textAppearance="?android:attr/textAppearanceListItem"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"/>

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"/>

        <Button
            android:id="@+id/date"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:hint="@string/expense_date_hint"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_padding"
                android:layout_marginEnd="@dimen/small_padding"
                android:layout_marginBottom="@dimen/small_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="numberDecimal"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <TextView
            android:text="@string/completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"/>


        <Switch
            android:id="@+id/completed"
            android:textOn="@string/yes"
            android:textOff="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipt"/>


        <ImageButton
            android:id="@+id/receiptImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/deleteReceipt"
            android:text="@string/delete_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
