<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_marginStart="@dimen/small_padding"
              android:layout_marginEnd="@dimen/small_padding"
              android:layout_marginTop="@dimen/small_padding"
              android:layout_marginBottom="@dimen/small_padding">

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startDate"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/start_date_hint"/>

        <Button
            android:id="@+id/endDate"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/end_date_hint"/>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags"/>

    <Button
        android:id="@+id/tags"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tags_hint"/>

    
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_destinations_text"/>

    <ListView
        android:id="@+id/destinationList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <Button
        android:id="@+id/newDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_destination"/>

</LinearLayout>
