<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <View
        android:id="@+id/distance_colour"
        android:layout_width="@dimen/small_padding"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Start Date"
            android:id="@+id/start_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Status"
            android:id="@+id/status"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Tags"
            android:id="@+id/tags"
            android:hint="@string/no_tags"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Currency Totals"
            android:id="@+id/totals"
            android:hint="@string/no_currencies"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/destinations"
            android:id="@+id/destinations"
            android:hint="@string/no_destinations"/>
    </LinearLayout>
</LinearLayout>
